DiD S6: text revision

--- a/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
@@ -427,7 +427,7 @@
             [then]
                 [message]
                     speaker=Malin Keshar
-                    message= _ "Did you really think you could outrun the dead, who need no rest nor sleep? Prepare to meet your makers, orc. Drogan, I will show you what my new powers are capable of. You will see how foolish you are to oppose me."
+                    message= _ "Did you really think you could outrun the dead, who need neither rest nor sleep? Prepare to meet your makers, orc. Drogan, I will show you what my new powers are capable of. You will see how foolish you are to oppose me."
                 [/message]
             [/then]
             [else]
@@ -489,7 +489,7 @@
 
                 [message]
                     speaker=Dela Keshar
-                    message= _ "Evil? You necromancers defile the bodies of the dead and slaughter the innocent for your sick perversions. How dare you speak of others as evil! Do you not see the depravity that you have become, Malin?"
+                    message= _ "You necromancers defile the bodies of the dead and slaughter the innocent for your sick perversions. Do you not see the depravity that you have become, Malin?"
                 [/message]
 
                 [message]
