DiD: updated credits

--- a/data/campaigns/Descent_Into_Darkness/_main.cfg
+++ b/data/campaigns/Descent_Into_Darkness/_main.cfg
@@ -25,22 +25,15 @@
 " + _"(Intermediate level, 12 scenarios.)"
 
     [about]
-        title = _ "Campaign Design"
+        title = _ "Original Campaign Design"
         [entry]
             name = "esci"
         [/entry]
     [/about]
     [about]
-        title = _ "Campaign Maintenance"
+        title = _ "Latest Campaign Revision"
         [entry]
-            name = "Lari Nieminen (zookeeper)"
-            comment = "current maintainer"
-        [/entry]
-        [entry]
-            name = "Thomas Baumhauer (Baufo)"
-        [/entry]
-        [entry]
-            name = "Charles Dang (vultraz)"
+            name = "nemaara"
         [/entry]
     [/about]
     [about]
@@ -56,6 +49,12 @@
         [entry]
             name= "theycallmerooster"
             comment = "old portraits"
+        [/entry]
+    [/about]
+    [about]
+        title = _ "Dialogue Comments and Revisions"
+        [entry]
+            name = "josteph"
         [/entry]
     [/about]
 [/campaign]
