--- a/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
@@ -17,6 +17,18 @@
     [story]
         [part]
             music=elvish-theme.ogg
+
+            # po: comments about dialogue style and characterization **THIS TEXT CONTAINS SPOILERS**:
+			# po:
+            # po: Drogan: although he is the captain of Parthyn's guard, he shows signs of recklessness and inflexibility; he's stiff and stubborn, which causes him to butt heads with Malin
+            # po:           often, we see that Drogan says something to Malin (e.g. banishing him) without a clearly good reason why, and that's because of his ego and confidence in his own righteousness
+            # po: Darken Volk: he talks a little more formally than Malin, and has quite a few ellipses in his speech. These are at points where he's not speaking exactly what he's thinking in his head because in reality,
+            # po:           he's trying to manipulate Malin for his own gain. His mode of speech is a little more formal.
+            # po: Dela: little more of a minor character, she's what you might expect from a sister. She isn't wholly against Malin until he kills Drogan, but she also doesn't really want to do much with a necromancer either.
+            # po: Malin: rash and impulsive, he cares a lot about his home, but doesn't see that power itself can be a corrupting force (though he does not seek power just for the sake of it, it is for another purpose which is
+            # po:           to drive off the orcs). He's a little more informal in his speech, meaning more contractions and colloquialisms, and this is intentional.
+            # po: Things to be careful about while editing: there are some poems in S8 and S11, please be mindful when making wording changes there. Some commas are added for readability even though they may not be grammatically correct.
+			# po:
             # po: If the target language has a specialized term for a fortified town, like Latin "oppidum", use it for Parthyn.
             story= _ "Malin Keshar was born ten years after the death of Haldric IV. He grew up in the northern border town of Parthyn, the second child and eldest son of the city’s baron. Every summer, by the time the mountainous paths and high passes shed their wintry gowns of snow, orcs descended from the northern hills to ravage the settlements at the frontier. Every year, Malin’s father led the townsfolk to repel the raids and force the orcs to retreat back to the north."
             {STORYTXT_BACKGROUND_BIGMAP_DID}
