DiD S12: punctuation fix

--- a/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
@@ -58,7 +58,7 @@
                 [/part]
                 [part]
                     # po: More text from the epilogue of Secrets of the Ancients
-                    story= _ "<i>“As for me, I will make my journal conspicuous on this battlefield. I suspect that most will fear it enough to try to destroy it, but I have placed several wards on my journal to protect it. This way, it should survive long enough to make its way into the hands of someone more open-minded. Tath, in particular, is home to many mages. It only takes one who is willing to learn.”</i>"
+                    story= _ "<i>“As for me, I will make my journal conspicuous on this battlefield. I suspect that most will fear it enough to try to destroy it, but I have placed several wards on my journal to protect it. This way, it should survive long enough to make its way into the hands of someone more open-minded. Tath, in particular, is home to many mages. It only takes one who is willing to learn...”</i>"
                     {STORYTXT_BACKGROUND book.jpg}
                 [/part]
                 [part]
@@ -77,7 +77,7 @@
                 [/part]
                 [part]
                     # po: More text from the epilogue of Secrets of the Ancients
-                    story= _ "<i>“As for me, I will make my journal conspicuous on this battlefield. I suspect that most will fear it enough to try to destroy it, but I have placed several wards on my journal to protect it. This way, it should survive long enough to make its way into the hands of someone more open-minded. Tath, in particular, is home to many mages. It only takes one who is willing to learn.”</i>"
+                    story= _ "<i>“As for me, I will make my journal conspicuous on this battlefield. I suspect that most will fear it enough to try to destroy it, but I have placed several wards on my journal to protect it. This way, it should survive long enough to make its way into the hands of someone more open-minded. Tath, in particular, is home to many mages. It only takes one who is willing to learn...”</i>"
                     {STORYTXT_BACKGROUND book.jpg}
                 [/part]
                 [part]
