DiD S11: gameplay tweaks

--- a/data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg
@@ -103,8 +103,8 @@
         fog=yes
         shroud=yes
         [ai]
-            aggression=1.0
-            caution=0.0
+            aggression=0.9
+            caution=0.1
             grouping=no
             simple_targeting=yes
             village_value=0
@@ -142,6 +142,10 @@
                 poisoned=yes
             [/status]
         [/unit]
+
+        [disallow_recruit]
+            side=1
+        [/disallow_recruit]
 
         [redraw]
             side=1
@@ -1254,9 +1258,9 @@
                     [leadership]
                         name= _ "conscience"
                         name_inactive= _ "conscience"
-                        description= _ "This unit has its damage increased by 35%"
-                        description_inactive= _ "This unit has its damage increased by 35%"
-                        value=35
+                        description= _ "This unit has its damage increased by 40%"
+                        description_inactive= _ "This unit has its damage increased by 40%"
+                        value=40
                         affect_self=yes
                         affect_enemies=no
                         affect_allies=no
@@ -1305,11 +1309,11 @@
                     [resistance]
                         id=carapace
                         max_value=90
-                        add=30
+                        add=35
                         name= _ "carapace"
                         name_inactive= _ "carapace"
-                        description= _ "This unit gains 30% to all resistances."
-                        description_inactive= _ "This unit gains 30% to all resistances."
+                        description= _ "This unit gains 35% to all resistances."
+                        description_inactive= _ "This unit gains 35% to all resistances."
                         affect_self=yes
                         [filter]
                             id=Malin Keshar
@@ -1355,11 +1359,11 @@
                 [abilities]
                     [regenerate]
                         id=lifeblood
-                        value=32
+                        value=40
                         name= _ "lifeblood"
                         name_inactive= _ "lifeblood"
-                        description= _ "This unit will heal 32 HP every turn. If it is poisoned, it will remove the poison instead of healing."
-                        description_inactive= _ "This unit will 32 HP every turn. If it is poisoned, it will remove the poison instead of healing."
+                        description= _ "This unit will heal 40 HP every turn. If it is poisoned, it will remove the poison instead of healing."
+                        description_inactive= _ "This unit will 40 HP every turn. If it is poisoned, it will remove the poison instead of healing."
                         affect_self=yes
                         poison=cured
                         [filter]
@@ -1781,7 +1785,7 @@
         {MODIFY_UNIT (type=Blood Bat) max_moves 4}
 
         [random_placement]
-            num_items=5
+            num_items=3
             variable=loc
             min_distance=3
             [filter_location]
@@ -1797,7 +1801,23 @@
         [/random_placement]
 
         [random_placement]
-            num_items=6
+            num_items=3
+            variable=loc
+            min_distance=3
+            [filter_location]
+                x,y=1-29,1-24
+                terrain=Uu,Uu^*
+                [not]
+                    [filter][/filter]
+                [/not]
+            [/filter_location]
+            [command]
+                {NOTRAIT_UNIT 3 "Giant Rat" $loc.x $loc.y}
+            [/command]
+        [/random_placement]
+
+        [random_placement]
+            num_items=8
             variable=loc
             min_distance=3
             [filter_location]
@@ -1813,7 +1833,7 @@
         [/random_placement]
 
         [random_placement]
-            num_items={ON_DIFFICULTY 1 1 2}
+            num_items=1
             variable=loc
             min_distance=11
             [filter_location]
@@ -1827,6 +1847,20 @@
                 {NOTRAIT_UNIT 3 "Giant Spider" $loc.x $loc.y} {GUARDIAN}
             [/command]
         [/random_placement]
+
+        [unit]
+            type=Dread Bat
+            side=3
+            x,y=2,23
+            max_hitpoints=60
+            hitpoints=60
+            max_moves=5
+            ai_special=guardian
+            moves=5
+            level=3
+        [/unit]
+
+        {MODIFY_UNIT (type=Giant Spider) max_moves 4}
 
         # Previously recruited and new adepts can now also become liches
         [lua]
@@ -1898,11 +1932,13 @@
     [/event]
 
     [event]
-        name=die
-        first_time_only=no
+        name=attack
         [filter]
-            type=Blood Bat
+            type=Giant Rat
         [/filter]
+        [filter_second]
+            side=1
+        [/filter_second]
         [filter_condition]
             [variable]
                 name=scenario_stage
@@ -1910,31 +1946,10 @@
             [/variable]
         [/filter_condition]
 
-        [random_placement]
-            num_items=1
-            variable=loc
-            min_distance=3
-            [filter_location]
-                x,y=1-29,1-24
-                terrain=Uu,Uu^*
-                [not]
-                    [filter][/filter]
-                [/not]
-                [not]
-                    [filter_adjacent_location]
-                        [filter]
-                            side=1
-                        [/filter]
-                        radius=7
-                    [/filter_adjacent_location]
-                [/not]
-            [/filter_location]
-            [command]
-                {NOTRAIT_UNIT 3 "Blood Bat" $loc.x $loc.y}
-            [/command]
-        [/random_placement]
-
-        {MODIFY_UNIT (type=Blood Bat) max_moves 4}
+        [message]
+            speaker=Mal Keshar
+            message= _ "Blasted rats!"
+        [/message]
     [/event]
 
     [event]
@@ -1952,9 +1967,50 @@
             [/variable]
         [/filter_condition]
 
+        [modify_unit]
+            [filter]
+                type=Giant Spider
+            [/filter]
+            [effect]
+                apply_to=status
+                remove=guardian
+            [/effect]
+        [/modify_unit]
+
         [message]
             speaker=Mal Keshar
             message= _ "Dela used to be afraid of spiders. Imagine if I showed her something like this..."
+        [/message]
+    [/event]
+
+    [event]
+        name=sighted
+        [filter]
+            type=Dread Bat
+        [/filter]
+        [filter_second]
+            side=1
+        [/filter_second]
+        [filter_condition]
+            [variable]
+                name=scenario_stage
+                numerical_equals=2
+            [/variable]
+        [/filter_condition]
+
+        [modify_unit]
+            [filter]
+                type=Dread Bat
+            [/filter]
+            [effect]
+                apply_to=status
+                remove=guardian
+            [/effect]
+        [/modify_unit]
+
+        [message]
+            speaker=Mal Keshar
+            message= _ "What an unusual bat."
         [/message]
     [/event]
 
@@ -2024,19 +2080,9 @@
             [/variable]
         [/filter_condition]
 
-        [if]
-            [have_unit]
-                side=2
-                [filter_vision]
-                    side=1
-                [/filter_vision]
-            [/have_unit]
-            [then][/then]
-            [else]
-                {MODIFY_UNIT (x,y=$x1,$y1) moves 6}
-                {MODIFY_UNIT (x,y=$x1,$y1) attacks_left 1}
-            [/else]
-        [/if]
+        {MODIFY_UNIT (x,y=$x1,$y1) moves 999}
+        {MODIFY_UNIT (x,y=$x1,$y1) vision 6}
+        {MODIFY_UNIT (x,y=$x1,$y1) attacks_left 1}
     [/event]
 
 # treasure boxes
@@ -3560,7 +3606,7 @@ And the tongue of fire begets ashen repose.</i>"
 
 # Initiate boss battle
     [event]
-        name=moveto
+        name=enter hex
         [filter]
             side=1
         [/filter]
@@ -3591,6 +3637,10 @@ And the tongue of fire begets ashen repose.</i>"
             radius=6
             multiturn=yes
         [/lift_fog]
+
+        {MODIFY_UNIT (id=Mal Keshar) moves 6}
+        {MODIFY_UNIT (id=Mal Keshar) vision 6}
+        {MODIFY_UNIT (id=Mal Keshar) attacks_left 1}
 
         {REPLACE_SCENARIO_MUSIC silence.ogg}
 
@@ -3806,7 +3856,7 @@ And the tongue of fire begets ashen repose.</i>"
                 carryover_percentage=100
             [/gold_carryover]
             [note]
-                description= _ "Runes may only be activated once per turn"
+                description= _ "At most one rune may be activated each turn"
             [/note]
         [/objectives]
 
