DiD S12: rebalanced scenario and added easter egg

--- a/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
@@ -672,16 +672,16 @@
                         hidden=no
                         team_name=enemies
 #ifdef EASY
-                        gold="$(180 + 80 * $timesForever)"
-                        income="$(5 + 3 * $timesForever)"
+                        gold="$(150 + 40 * $timesForever)"
+                        income="$(5 + 1 * $timesForever)"
 #endif
 #ifdef NORMAL
-                        gold="$(200 + 100 * $timesForever)"
-                        income="$(6 + 4 * $timesForever)"
+                        gold="$(175 + 50 * $timesForever)"
+                        income="$(6 + 2 * $timesForever)"
 #endif
 #ifdef HARD
-                        gold="$(220 + 120 * $timesForever)"
-                        income="$(7 + 5 * $timesForever)"
+                        gold="$(200 + 60 * $timesForever)"
+                        income="$(7 + 3 * $timesForever)"
 #endif
                         [ai]
                             aggression="$(min( [1.0, (0.3 + 0.1 * $timesForever) ] ) )"
@@ -824,16 +824,16 @@
             side=2
             team_name=enemies
 #ifdef EASY
-            gold="$(180 + 80 * $timesForever)"
-            income="$(5 + 3 * $timesForever)"
+            gold="$(200 + 40 * $timesForever)"
+            income="$(5 + 5 * $timesForever)"
 #endif
 #ifdef NORMAL
-            gold="$(200 + 100 * $timesForever)"
-            income="$(6 + 4 * $timesForever)"
+            gold="$(225 + 50 * $timesForever)"
+            income="$(6 + 6 * $timesForever)"
 #endif
 #ifdef HARD
-            gold="$(220 + 120 * $timesForever)"
-            income="$(7 + 5 * $timesForever)"
+            gold="$(250 + 60 * $timesForever)"
+            income="$(7 + 7 * $timesForever)"
 #endif
             [ai]
                 aggression="$(min( [1.0, (0.3 + 0.1 * $timesForever) ] ) )"
@@ -872,7 +872,7 @@
         [/if]
 
         [recall]
-            id=Xanthric
+            type=Skeletal Dragon
             x,y=28,19
         [/recall]
     [/event]
@@ -1022,7 +1022,7 @@
                 [message]
                     speaker=narrator
                     image=misc/makeshift-altar.png
-                    story= _ "Mal Keshar has had time to study the book, learning how his apprentices can become liches with less reliance on luck than Malin’s own transformation."
+                    message= _ "Mal Keshar has had time to study the book, learning how his apprentices can become liches with less reliance on luck than Malin’s own transformation."
                 [/message]
             [/then]
         [/if]
@@ -1040,13 +1040,28 @@
         [if]
             {VARIABLE_CONDITIONAL timesForever greater_than_equal_to 3}
             [then]
-                {PLACE_IMAGE (items/book5.png) 18 20}
+                {PLACE_IMAGE (items/book5.png) 17 27}
+                {PLACE_IMAGE (items/book2.png) 6 29}
 
                 [event]
                     name=moveto
                     first_time_only=yes
                     [filter]
-                        x,y=18,20
+                        x,y=6,29
+                        id=Mal Keshar
+                    [/filter]
+
+                    [message]
+                        speaker=Mal Keshar
+                        message= _ "This is my journal."
+                    [/message]
+                [/event]
+
+                [event]
+                    name=moveto
+                    first_time_only=yes
+                    [filter]
+                        x,y=17,27
                         side=2,3
                     [/filter]
 
@@ -1500,10 +1515,77 @@
                             message= _ "Just some puny human. Amusing that he was more bothersome in death than in life. Annoying that it took so long to kill him."
                         [/message]
 
-                        [message]
-                            role=speakinghero
-                            message= _ "Anyway, round up the wolves. I’m going home."
-                        [/message]
+                        # easter egg text
+                        [if]
+                            [variable]
+                                name=x1
+                                numerical_equals=6
+                            [/variable]
+                            [and]
+                                [variable]
+                                    name=y1
+                                    numerical_equals=29
+                                [/variable]
+                            [/and]
+                            [then]
+                                [message]
+                                    role=second
+                                    message= _ "Boss, look! There’s a shiny book here! I think it’s the lich’s journal."
+                                [/message]
+
+                                [message]
+                                    role=speakinghero
+                                    message= _ "Well, what’s it say?"
+                                [/message]
+
+                                [message]
+                                    role=second
+                                    message= _ "The last message says this:"
+                                [/message]
+
+                                [message]
+                                    speaker=narrator
+                                    image=items/book2.png
+                                    message= _ "<i>“Today, in a fit of madness, I had a terrible, terrible thought. It came from that stupid memory again, from that time at the Academy when Zephrin and I had an argument about orcs. ‘Orcs aren’t so bad,’ he told me. ‘They are sometimes a bit brutish, but not really at all the beasts you think they are. You should try to be nicer to them.’ At the time, I had thought that it was complete and utter nonsense! ‘Orcs aren’t so bad’? Next thing you know, he’d be telling me that dwarves and trolls are the best of friends.</i>"
+                                [/message]
+
+                                [message]
+                                    speaker=narrator
+                                    image=items/book2.png
+                                    message= _ "<i>But, for some ungodly reason, today... I had that horrible thought. I mused that orcs might not be so bad, after all, in that they are no worse than any of the other living races. Everyone has their own faults, their foolishness, and stupidity. Elves, pride. Dwarves, greed. Trolls, sloth. Orcs, wrath. And humans? A good mix of the above. They are all appalling in their own ways. It is not that I hate orcs any less, it is simply that I have begun to hate everyone else equally as much.</i>"
+                                [/message]
+
+                                [message]
+                                    speaker=narrator
+                                    image=items/book2.png
+                                    # po: Bah is an exclamation of irritation.
+                                    message= _ "<i>Bah! No, what am I saying? I must have lost my mind. That toad Zephrin was a delusional fool. If he were here right now to read my journal, he would say something stupid like, ‘Fun story, Malin, but you really should put a disclaimer. You know, to make sure everyone understands that no orcs were harmed in the making of these accounts.’ Right, like my whole life was some sort of work of fiction.”</i>"
+                                [/message]
+
+                                [message]
+                                    role=speakinghero
+                                    # po: Faugh is another exclamation of disgust or irritation
+                                    message= _ "Faugh! Do these humans believe that we are fools? They must think we are all actors in a poorly written drama!"
+                                [/message]
+
+                                [message]
+                                    role=second
+                                    # po: B-but is a stuttered 'but'
+                                    message= _ "B-but boss, he was only saying something hypothetical—"
+                                [/message]
+
+                                [message]
+                                    role=speakinghero
+                                    message= _ "Quit your babbling and round up the wolves. I’m going home."
+                                [/message]
+                            [/then]
+                            [else]
+                                [message]
+                                    role=speakinghero
+                                    message= _ "Anyway, round up the wolves. I’m going home."
+                                [/message]
+                            [/else]
+                        [/if]
                     [/case]
                 [/switch]
 
