DiD S11: added extra dialogue

--- a/data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg
@@ -3863,6 +3863,30 @@ And the tongue of fire begets ashen repose.</i>"
         [cancel_action][/cancel_action]
     [/event]
 
+# flavor text if you capture the dragon's keep
+    [event]
+        name=moveto
+        [filter]
+            side=1
+        [/filter]
+        [filter_condition]
+            [variable]
+                name=scenario_stage
+                numerical_equals=3
+            [/variable]
+        [/filter_condition]
+
+        [message]
+            speaker=Xanthric
+            message= _ "<i><big>How dare you?! That stone is <b>my</b> throne! I am the king of this domain!</big></i>"
+        [/message]
+
+        [message]
+            speaker=Mal Keshar
+            message= _ "Peasant, warrior, king or emperor, all living things are the subjects of death. Eternity will claim your soul as its own if I do not."
+        [/message]
+    [/event]
+
 # spawns
     [event]
         name=new turn
