DiD S12: modified easter egg

--- a/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
@@ -1053,7 +1053,7 @@
 
                     [message]
                         speaker=Mal Keshar
-                        message= _ "This is my journal."
+                        message= _ "There is a journal here."
                     [/message]
                 [/event]
 
@@ -1530,53 +1530,28 @@
                             [then]
                                 [message]
                                     role=second
-                                    message= _ "Boss, look! There’s a shiny book here! I think it’s the lich’s journal."
+                                    message= _ "Boss, look! There’s a shiny book here!"
                                 [/message]
 
                                 [message]
                                     role=speakinghero
-                                    message= _ "Well, what’s it say?"
+                                    message= _ "Well, what is it?"
                                 [/message]
 
                                 [message]
                                     role=second
-                                    message= _ "The last message says this:"
-                                [/message]
+                                    # po: The speaker describes the coat of arms that is the logo of Wesnoth (the game).
+                                    # po: The speaker does not know the proper terminology of heraldic blazons, but does know the proper names of various types of swords.
+                                    # po: "ancient tongue" alludes to the use of Latin for European heraldic mottos. The use of italics likewise alludes to italicizing Latin phrases used in English texts.
+                                    message= _ "I don’t know, but there’s a coat of arms on the front. It’s a shield depicting the Sceptre of Fire in gold surrounded by a black band, superimposed on a pair of arming swords crossed in a saltire. Below it, there’s an inscription in an ancient tongue that says:
 
-                                [message]
-                                    speaker=narrator
-                                    image=items/book2.png
-                                    message= _ "<i>“Today, in a fit of madness, I had a terrible, terrible thought. It came from that stupid memory again, from that time at the Academy when Zephrin and I had an argument about orcs. ‘Orcs aren’t so bad,’ he told me. ‘They are sometimes a bit brutish, but not really at all the beasts you think they are. You should try to be nicer to them.’ At the time, I had thought that it was complete and utter nonsense! ‘Orcs aren’t so bad’? Next thing you know, he’d be telling me that dwarves and trolls are the best of friends.</i>"
-                                [/message]
-
-                                [message]
-                                    speaker=narrator
-                                    image=items/book2.png
-                                    message= _ "<i>But, for some ungodly reason, today... I had that horrible thought. I mused that orcs might not be so bad, after all, in that they are no worse than any of the other living races. Everyone has their own faults, their foolishness, and stupidity. Elves, pride. Dwarves, greed. Trolls, sloth. Orcs, wrath. And humans? A good mix of the above. They are all appalling in their own ways. It is not that I hate orcs any less, it is simply that I have begun to hate everyone else equally as much.</i>"
-                                [/message]
-
-                                [message]
-                                    speaker=narrator
-                                    image=items/book2.png
-                                    # po: Bah is an exclamation of irritation.
-                                    message= _ "<i>Bah! No, what am I saying? I must have lost my mind. That toad Zephrin was a delusional fool. If he were here right now to read my journal, he would say something stupid like, ‘Fun story, Malin, but you really should put a disclaimer. You know, to make sure everyone understands that no orcs were harmed in the making of these accounts.’ Right, like my whole life was some sort of work of fiction.”</i>"
+<i>No orcs were harmed in the making of these accounts.</i>"
                                 [/message]
 
                                 [message]
                                     role=speakinghero
-                                    # po: Faugh is another exclamation of disgust or irritation
-                                    message= _ "Faugh! Do these humans believe that we are fools? They must think we are all actors in a poorly written drama!"
-                                [/message]
-
-                                [message]
-                                    role=second
-                                    # po: B-but is a stuttered 'but'
-                                    message= _ "B-but boss, he was only saying something hypothetical—"
-                                [/message]
-
-                                [message]
-                                    role=speakinghero
-                                    message= _ "Quit your babbling and round up the wolves. I’m going home."
+                                    # po: Bah is an exclamation of disgust or irritation
+                                    message= _ "Bah! Do these people believe that we are fools? They must think we are all actors in a poorly written drama! I’ve had enough of this. I’m going home."
                                 [/message]
                             [/then]
                             [else]
