DiD S5: gameplay and dialogue fixes

--- a/data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg
@@ -16,7 +16,7 @@
 
     [story]
         [part]
-            story=_ "The cycle of the seasons churns and summer and fall roll around once more. Malin’s thoughts turn back to Parthyn frequently, where a year prior, he had still been among family and friends in the rustic little town that he still thinks of as his estranged home. His unjust banishment has turned him into a forsaken wanderer, he thinks, but the still burning image of his father being cut down amidst the ruins of his home is imprinted at the forefront of his mind."
+            story=_ "The cycle of the seasons churns and summer and fall roll around once more. Malin’s thoughts turn back to Parthyn frequently, where a year prior, he had still been among family and friends in the rustic little town that he still thinks of as his home. He has since become forsaken wanderer, he thinks, but the still burning image of his father being cut down amidst the ruins of his home is imprinted at the forefront of his mind."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
@@ -61,7 +61,7 @@
         controller=ai
         recruit=Goblin Spearman,Orcish Archer,Orcish Crossbowman,Wolf Rider,Orcish Grunt,Goblin Knight,Orcish Warrior,Troll Whelp
         {GOLD 70 80 90}
-        {INCOME 8 9 10}
+        {INCOME 6 7 8}
         team_name=orcs
         user_team_name=_"Orcs"
         {FLAG_VARIANT6 ragged}
@@ -137,7 +137,7 @@
         controller=ai
         recruit=Orcish Archer,Orcish Crossbowman,Troll Whelp,Wolf Rider,Orcish Grunt
         {GOLD 70 80 90}
-        {INCOME 8 9 10}
+        {INCOME 6 7 8}
         team_name=orcs
         user_team_name= _ "Orcs"
         {FLAG_VARIANT6 ragged}
@@ -286,7 +286,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "Death is only the beginning for you. I’m sure you will enjoy your new life as my thrall. And now for the last one—"
+            message= _ "Death is only the beginning for you. After this battle, you can be sure that I will make you into my thrall. And now for the last one—"
         [/message]
 
         [store_unit]
