DiD S6: dialogue/gameplay fixes

--- a/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
@@ -8,7 +8,7 @@
     victory_when_enemies_defeated=no
     next_scenario=07_A_Small_Favor
 
-    {DEFAULT_SCHEDULE_SECOND_WATCH}
+    {DEFAULT_SCHEDULE}
 
     {SCENARIO_MUSIC       the_city_falls.ogg}
     {EXTRA_SCENARIO_MUSIC knolls.ogg}
@@ -686,7 +686,7 @@
 
         [message]
             speaker=Dela Keshar
-            message= _ "There is no reason to be had with someone who embraces evil so shamelessly! You will pay for Drogan’s death! It pains me to think that you were once my brother."
+            message= _ "There is no reason to be had with someone who embraces evil so shamelessly! You will pay for Drogan’s death!"
         [/message]
 
         [if]
@@ -720,6 +720,8 @@
                 condition=lose
                 description= _ "Death of Malin Keshar"
             [/objective]
+            
+            {TURNS_RUN_OUT}
 
             [gold_carryover]
                 bonus=no
