DiD S10: updated objectives

--- a/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
@@ -161,6 +161,8 @@
                 description= _ "Death of Malin Keshar"
             [/objective]
 
+            {TURNS_RUN_OUT}
+
             [gold_carryover]
                 bonus=no
                 carryover_percentage=40
@@ -739,6 +741,8 @@
                 condition=lose
                 description= _ "Death of Malin Keshar"
             [/objective]
+
+            {TURNS_RUN_OUT}
 
             [gold_carryover]
                 bonus=no
