Re-add server2.w.o to the built-in list of alternate servers
See issue #3873.

[ci skip]

--- a/data/game_config.cfg
+++ b/data/game_config.cfg
@@ -4,10 +4,10 @@
         name=_"Official Wesnoth Server"
         address=server.wesnoth.org:15000
     [/server]
-    #[server]
-    #    name=_"Alternate Wesnoth Server"
-    #    address=server2.wesnoth.org:15000
-    #[/server]
+    [server]
+        name=_"Alternate Wesnoth Server"
+        address=server2.wesnoth.org:15000
+    [/server]
     #[server]
     #    name=_"Alternate Wesnoth Server"
     #    address=server3.wesnoth.org:15000
