Add @viy2 to credits

--- a/data/core/about.cfg
+++ b/data/core/about.cfg
@@ -1708,6 +1708,10 @@
         comment = "2012 Google Code-in Students' Micro AI development"
     [/entry]
     [entry]
+        name = "viy"
+        email = "viy_AT_altlinux.org"
+    [/entry]
+    [entry]
         name = "Vladimír Slávik"
         comment = "Miscellaneous text formatting and translation engine related help"
     [/entry]
