--- a/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
@@ -50,7 +50,7 @@
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
         [part]
-            story= _ "The silence was broken by the irregular shuffle of a man emerging from the trees. He stood before them, a hunched figure with a rasping voice reminiscent of crackling bones. <i>“I am Darken Volk. While I know you do not love my kind, I think it is vital that we put aside our differences for the moment. The orc menace grows in the north and they will soon return in even greater force. You cannot hope to defend against them without my help.”</i>"
+            story= _ "The silence was broken by the irregular shuffle of a man emerging from the trees. He stood before them, a hunched figure with a rasping voice reminiscent of crackling bones. <i>“I am Darken Volk. While I know you do not love my kind, I think it is vital that we put aside our differences for the moment. The orcish menace grows in the north and they will soon return in even greater force. You cannot hope to defend against them without my help.”</i>"
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
         [part]
@@ -168,7 +168,7 @@
 
     # Signpost to mark area defended
     {PLACE_IMAGE scenery/signpost.png 17 16}
-    {PLACE_IMAGE items/book2.png 19 16}
+    {PLACE_IMAGE items/book2.png 28 19}
 
     [event]
         name=prestart
@@ -182,7 +182,7 @@
             [objective]
                 {ALTERNATIVE_OBJECTIVE_CAPTION}
                 condition=win
-                description= _ "Kill the orc leader"
+                description= _ "Kill the orcish leader"
             [/objective]
             [objective]
                 condition=lose
@@ -226,7 +226,7 @@
 
         [message]
             speaker=Drogan
-            message= _ "Quit bickering, you two. With the bulk of their forces massacred in that assault, the orc encampments will be greatly weakened. The raiding party should be able to clear them out and leave us a relatively quiet summer."
+            message= _ "Quit bickering, you two. With the bulk of their forces massacred in that assault, the orcish encampments will be greatly weakened. The raiding party should be able to clear them out and leave us a relatively quiet summer."
         [/message]
 
         [message]
@@ -312,7 +312,7 @@
     [event]
         name=moveto
         [filter]
-            x,y=19,16
+            x,y=28,19
             id=Malin Keshar
         [/filter]
         [message]
