DiD S3: added time area to snow hexes

--- a/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
@@ -8,6 +8,11 @@
     turns=unlimited
     next_scenario=04_Beginning_of_the_Revenge
 
+    [time_area]
+        x=15-16
+        y=20-21
+        {DEFAULT_SCHEDULE}
+    [/time_area]
     {UNDERGROUND}
 
     {SCENARIO_MUSIC       the_deep_path.ogg}
