DiD S5: typo fix

--- a/data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg
@@ -380,7 +380,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "Your apprenticeship is nearly over; you are more than capable of handling a single, half-dead orc on your own. After, I do have a small favor I will ask of you. It will constitute the last part of your... training. I have some other things that I must attend to in prepartion. In a few weeks, meet with me to the west, near the town of Tath. For now, hunt down the last chieftain."
+            message= _ "Your apprenticeship is nearly over; you are more than capable of handling a single, half-dead orc on your own. After, I do have a small favor I will ask of you. It will constitute the last part of your... training. I have some other things that I must attend to in preparation. In a few weeks, meet with me to the west, near the town of Tath. For now, hunt down the last chieftain."
         [/message]
 
         [endlevel]
