DiD S7: removed redundant code and added dialogue

--- a/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
@@ -472,7 +472,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "This spell will not hide us completely. If we stray too close to the guards, they will still be able to see us. Once we are spotted, we will have to make a run for it."
+            message= _ "This spell will not hide us completely. If we stray too close to the guards, they will still be able to see us. Once we are spotted, we will have to make a run for it. The faster we enter the manor, the more time we will have to search for the book before the guards will start to pursue us."
         [/message]
 
         [message]
@@ -655,6 +655,7 @@
         name=victory
 
         {SET_GOT_INSIDE_MANOR}
+
 #ifdef EASY
         [set_variable]
             name=S7_turns
@@ -673,18 +674,6 @@
             value=$("18 - ($turn_number)")
         [/set_variable]
 #endif
-
-        {MODIFY_UNIT (
-            side=1
-            {NOT_ON_RECALL_LIST}
-            [not]
-                id=Malin Keshar
-
-                [or]
-                    id=Darken Volk
-                [/or]
-            [/not]
-        ) variables.got_inside_manor yes}
 
         {CLEAR_VARIABLE guard_alerted}
     [/event]
