DiD S8: fixed objective wording

--- a/data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg
@@ -118,7 +118,7 @@
             side=1
             [objective]
                 condition=win
-                description= _ "Find mage Lord Karres"
+                description= _ "Find Lord Karres"
             [/objective]
             [objective]
                 condition=lose
