DiD S10: dialogue fix

--- a/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
@@ -16,7 +16,7 @@
 
     [story]
         [part]
-            story= _ "As he enters the tunnel underneath Lord Karres’s manor, Darken Volk gestures and causes the entrance to collapse. The two necromancers turn and begin walking down the pitch-black tunnel, temporarily safe from pursuit."
+            story= _ "As he enters the tunnel underneath Lord Karres’s manor, Darken Volk gestures, causing the entrance to collapse. The two necromancers turn and begin walking down the pitch-black tunnel, temporarily safe from pursuit."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
