--- a/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
@@ -921,7 +921,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "... then again, is there a point? Even should I escape, then what?"
+            message= _ "... then again, is there a point? Even should I escape, then what? All that I have fought for, everyone who I have tried to protect, everything is gone to me."
         [/message]
 
         [message]
